Show correct totals for Transactions by Category

BUG:382245
FIXED-IN:5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>